--- a/root/MainProject/src/CMakeLists.txt
+++ b/root/MainProject/src/CMakeLists.txt
@@ -1,1 +1,6 @@
-
+include_directories(${MyProject_SOURCE_DIR}/MainProject/inc)
+# I assume you want to use LibProject as a library in MainProject.
+include_directories(${MyProject_SOURCE_DIR}/LibProject/inc)
+link_directories(${MyProject_SOURCE_DIR}/LibProject/src)
+add_executable(MainProject main.cpp)
+target_link_libraries(MainProject LibProject)
