--- a/root/MainProject/src/CMakeLists.txt
+++ b/root/MainProject/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.24)
 include_directories(${MyProject_SOURCE_DIR}/MainProject/inc)
 # I assume you want to use LibProject as a library in MainProject.
 include_directories(${MyProject_SOURCE_DIR}/LibProject/inc)
